log
Sat Apr  9 19:46:59 HSP 2022: 
 hashmap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2a07b12
Sat Apr  9 19:47:35 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d4dd319
Sat Apr  9 19:51:36 HSP 2022: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|6
total_score: 0/70
6af80d2
Sat Apr  9 19:53:45 HSP 2022: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  4|5
total_score: 20/70
c418d97
Sat Apr  9 19:55:14 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
de6e7f2
Sat Apr  9 19:55:51 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
8c44103
Sat Apr  9 19:57:15 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
1c4b97e
Sat Apr  9 20:12:11 HSP 2022: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:72:22: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     nuevo -> buckets = (Pair*) calloc(capacity, sizeof(Pair));
                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
e99348c
Sat Apr  9 20:12:56 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
2a24772
Sun Apr 10 16:04:47 HSP 2022: 
 hashmap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
e7dc653
Sun Apr 10 16:06:39 HSP 2022: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  8|3
total_score: 40/70
363568d
Sun Apr 10 16:07:26 HSP 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
b52437c
Sun Apr 10 16:14:35 HSP 2022: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
e654cc0
Sun Apr 10 17:34:14 HSP 2022: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
93d4ea7
Sun Apr 10 17:25:43 HSP 2022: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  8|3
total_score: 40/70
80bb7c7
